Optimize build time

--- a/examples/react/Dockerfile
+++ b/examples/react/Dockerfile
@@ -6,7 +6,8 @@ RUN addgroup app && adduser -S -G app app
 USER app
 
 WORKDIR /app
-COPY . .
+COPY package.json .
 RUN npm install
+COPY . .
 EXPOSE 5173
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
